objects/PEPE_Event_Agenda__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Cost__c</fullName>
        <description>Actual Cost = Learning Partner Cost + Catering and Vendor Cost + DW Cost</description>
        <formula>Learning_Partner_Cost__c  +  Catering_and_Vendor_Cost__c +  VAT__c   +  DW_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of the values of Learning Partner Cost, Catering Vendor Agency Cost, VAT and DW Cost.</inlineHelpText>
        <label>Actual Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agenda_Description__c</fullName>
        <formula>Agenda_Id__r.Agenda_Description__c</formula>
        <label>Agenda Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agenda_Id__c</fullName>
        <label>Agenda Id</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>PEPE_Agenda_Topic__c.Agenda_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>PEPE_Agenda_Topic__c</referenceTo>
        <relationshipLabel>Event Agenda</relationshipLabel>
        <relationshipName>Training_Agenda</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Agenda_Title__c</fullName>
        <description>formula reference from Agenda object</description>
        <formula>Agenda_Id__r.Agenda__c</formula>
        <label>Agenda Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Language__c</fullName>
        <description>Updated By Learning Partner</description>
        <inlineHelpText>Updated By Learning Partner</inlineHelpText>
        <label>Alternate Language</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Architecture__c</fullName>
        <description>formula reference from Agenda object</description>
        <formula>TEXT(Agenda_Id__r.Architecture__c)</formula>
        <label>Architecture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLP_Created_By__c</fullName>
        <label>BLP Created By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLP_Created_On__c</fullName>
        <label>BLP Created On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BLP_Last_Modified_By__c</fullName>
        <label>BLP Last Modified By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLP_Modified_On__c</fullName>
        <label>BLP Modified On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSAT__c</fullName>
        <inlineHelpText>Updated from Learning Partner</inlineHelpText>
        <label>CSAT</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Catering_and_Vendor_Cost__c</fullName>
        <description>Cost towards local agency catering service</description>
        <inlineHelpText>Updated By Learning Partner</inlineHelpText>
        <label>Catering and Vendor Cost</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>LP Comments are added here</description>
        <label>Comments</label>
        <length>9000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DW_Cost__c</fullName>
        <inlineHelpText>Cost of the Derivate works</inlineHelpText>
        <label>DW Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DW_ID__c</fullName>
        <description>DW Id from Agenda Topic</description>
        <formula>Agenda_Id__r.DW_ID__c</formula>
        <label>DW ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Team__c</fullName>
        <description>formula reference from Agenda object</description>
        <formula>TEXT(Agenda_Id__r.Delivery_Team__c)</formula>
        <label>Delivery Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_by_local_learning_Partner__c</fullName>
        <description>Updated By Learning Partner</description>
        <inlineHelpText>Updated By Learning Partner</inlineHelpText>
        <label>Delivery by local learning Partner?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_in_preferred_language__c</fullName>
        <description>Updated By Learning Partner</description>
        <inlineHelpText>Updated By Learning Partner</inlineHelpText>
        <label>Delivery in preferred language?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration_Unit__c</fullName>
        <description>formula reference from Agenda object</description>
        <formula>TEXT( Agenda_Id__r.Duration_Unit__c )</formula>
        <label>Duration Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration_value__c</fullName>
        <label>Duration value</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXT_URL__c</fullName>
        <description>This field has the Java BLP Portal URL for sending EA links in Email to the BLPs. The URLs changed dynamically based on platform</description>
        <formula>IF(Platform__c ='Partner Plus Lounge', 'http://pepe.cloudapps.cisco.com/BLP/PEPEBLP.htm?platform=PPL&amp;Tab=Event&amp;TR='+Name,'')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EXT URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time_HH_MM__c</fullName>
        <label>End Time (HH:MM)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Cost__c</fullName>
        <formula>Agenda_Id__r.Estimated_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Event_Agenda_Duration__c</fullName>
        <formula>(End_Date_Time__c -  Start_Date_Time__c)*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Agenda Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <formula>IF(INCLUDES( Training_Offering_Id__r.Language_Coverage__c , "Arabic"), "Arabic;",NULL)+
IF(INCLUDES( Training_Offering_Id__r.Language_Coverage__c , "Austrian"), "Austrian;",NULL)+
IF(INCLUDES( Training_Offering_Id__r.Language_Coverage__c , "Bosnian"), "Bosnian;",NULL)+
IF(INCLUDES( Training_Offering_Id__r.Language_Coverage__c , "Bulgarian"), "Bulgarian;",NULL)+
IF(INCLUDES( Training_Offering_Id__r.Language_Coverage__c , "Croatian"), "Croatian;",NULL)+
IF(INCLUDES( Training_Offering_Id__r.Language_Coverage__c , "Czech"), "Czech;",NULL)+
IF(INCLUDES( Training_Offering_Id__r.Language_Coverage__c , "Danish"), "Danish;",NULL)+
IF(INCLUDES( Training_Offering_Id__r.Language_Coverage__c , "Dutch"), "Dutch;",NULL)+
IF(INCLUDES( Training_Offering_Id__r.Language_Coverage__c , "English"), "English;",NULL)+
IF(INCLUDES( Training_Offering_Id__r.Language_Coverage__c , "Estonian"), "Estonian;",NULL)+
IF(INCLUDES( Training_Offering_Id__r.Language_Coverage__c , "Finish"), "Finish;",NULL)+
IF(INCLUDES( Training_Offering_Id__r.Language_Coverage__c , "Flemish"), "Flemish;",NULL)+
IF(INCLUDES( Training_Offering_Id__r.Language_Coverage__c , "French"), "French;",NULL)+
IF(INCLUDES( Training_Offering_Id__r.Language_Coverage__c , "German"), "German;",NULL)+
IF(INCLUDES( Training_Offering_Id__r.Language_Coverage__c , "Greek"), "Greek;",NULL)+
IF(INCLUDES( Training_Offering_Id__r.Language_Coverage__c , "Hebrew"), "Hebrew;",NULL)+
IF(INCLUDES( Training_Offering_Id__r.Language_Coverage__c , "Hungarian"), "Hungarian;",NULL)+
IF(INCLUDES( Training_Offering_Id__r.Language_Coverage__c , "Italian"), "Italian;",NULL)+
IF(INCLUDES( Training_Offering_Id__r.Language_Coverage__c , "Latvian"), "Latvian;",NULL)+
IF(INCLUDES( Training_Offering_Id__r.Language_Coverage__c , "Lithuanian"), "Lithuanian;",NULL)+
IF(INCLUDES( Training_Offering_Id__r.Language_Coverage__c , "Norwegean"), "Norwegean;",NULL)+
IF(INCLUDES( Training_Offering_Id__r.Language_Coverage__c , "Polish"), "Polish;",NULL)+
IF(INCLUDES( Training_Offering_Id__r.Language_Coverage__c , "Portuguese"), "Portuguese;",NULL)+
IF(INCLUDES( Training_Offering_Id__r.Language_Coverage__c , "Romanian"), "Romanian;",NULL)+
IF(INCLUDES( Training_Offering_Id__r.Language_Coverage__c , "Russian"), "Russian;",NULL)+
IF(INCLUDES( Training_Offering_Id__r.Language_Coverage__c , "Slovene"), "Slovene;",NULL)+
IF(INCLUDES( Training_Offering_Id__r.Language_Coverage__c , "Spanish"), "Spanish;",NULL)+
IF(INCLUDES( Training_Offering_Id__r.Language_Coverage__c , "Swedish"), "Swedish;",NULL)+
IF(INCLUDES( Training_Offering_Id__r.Language_Coverage__c , "Turkish"), "Turkish;",NULL)+
IF(INCLUDES( Training_Offering_Id__r.Language_Coverage__c , "Thai"), "Thai;",NULL)+
IF(INCLUDES( Training_Offering_Id__r.Language_Coverage__c , "Japanese"), "Japanese;",NULL)+
IF(INCLUDES( Training_Offering_Id__r.Language_Coverage__c , "Korean"), "Korean;",NULL)+
IF(INCLUDES( Training_Offering_Id__r.Language_Coverage__c , "Vietnamese"), "Vietnamese;",NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Learning_Partner_Cost__c</fullName>
        <description>Final cost of training delivery by Learning Partner</description>
        <inlineHelpText>Updated By Learning Partner</inlineHelpText>
        <label>Learning Partner Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Learning_Partner_Country__c</fullName>
        <description>Country for given Learning partner</description>
        <label>Learning Partner Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Burundi</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
                <value>
                    <fullName>Cape Verde</fullName>
                </value>
                <value>
                    <fullName>Central African Republic</fullName>
                </value>
                <value>
                    <fullName>Chad</fullName>
                </value>
                <value>
                    <fullName>Comoros</fullName>
                </value>
                <value>
                    <fullName>Congo, D.R.</fullName>
                </value>
                <value>
                    <fullName>Congo (Brazzaville)</fullName>
                </value>
                <value>
                    <fullName>Cote d'Ivoire</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Djibouti</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Learning_Partner__c</fullName>
        <description>formula reference from Agenda object</description>
        <formula>TEXT(Agenda_Id__r.Business_Learning_Partner__c )</formula>
        <label>Learning Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Learning_Partner_Name__c</fullName>
        <description>Updated By Learning Partner</description>
        <inlineHelpText>Updated By Learning Partner</inlineHelpText>
        <label>Local Learning Partner Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Partners__c</fullName>
        <inlineHelpText>Updated from Leaning Partner</inlineHelpText>
        <label>No of Partners</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Updates__c</fullName>
        <description>This field will provide the other updates for a given LP record.</description>
        <label>Other Updates</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PLP_Email_Field_01__c</fullName>
        <label>PLP Email Field 01</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Participant_Types__c</fullName>
        <description>Captures Participant types attended</description>
        <inlineHelpText>Updated by Learning Partners</inlineHelpText>
        <label>Participant Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>Mixed</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>SE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Participant_count__c</fullName>
        <inlineHelpText>Updated from Learning Partner</inlineHelpText>
        <label>Participant count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <formula>TEXT(Training_Offering_Id__r.Platform__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Platform</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Language__c</fullName>
        <description>Language in which the event is set up for. The Language selection is done by Regional leads at the time of selecting the events</description>
        <label>Preferred Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Austrian</fullName>
                </value>
                <value>
                    <fullName>Bosnian</fullName>
                </value>
                <value>
                    <fullName>Bulgarian</fullName>
                </value>
                <value>
                    <fullName>Croatian</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Estonian</fullName>
                </value>
                <value>
                    <fullName>Finish</fullName>
                </value>
                <value>
                    <fullName>Flemish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Hebrew</fullName>
                </value>
                <value>
                    <fullName>Hungarian</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Latvian</fullName>
                </value>
                <value>
                    <fullName>Lithuanian</fullName>
                </value>
                <value>
                    <fullName>Norwegean</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Romanian</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Slovene</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Swedish</fullName>
                </value>
                <value>
                    <fullName>Turkish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recommendation__c</fullName>
        <description>This field provides the Recommendations in case any.</description>
        <label>Recommendation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Registration_Count__c</fullName>
        <inlineHelpText>Updated From Learning partner</inlineHelpText>
        <label>Registration Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remarks_or_Feedback__c</fullName>
        <description>Post event feedback</description>
        <inlineHelpText>Updated by Learning Partners</inlineHelpText>
        <label>Remarks or Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Repository_Link__c</fullName>
        <inlineHelpText>Updated from Learning Partner</inlineHelpText>
        <label>Repository Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Session_Type__c</fullName>
        <description>Agenda Topic session type</description>
        <formula>text(Agenda_Id__r.Session_Type__c)</formula>
        <label>Session Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time (HH:MM)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the Training Agenda</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                    <label>Created</label>
                </value>
                <value>
                    <fullName>Learning Partner being contacted</fullName>
                </value>
                <value>
                    <fullName>Revised Details Requested</fullName>
                </value>
                <value>
                    <fullName>Quote Accepted</fullName>
                </value>
                <value>
                    <fullName>Quote Rejected</fullName>
                </value>
                <value>
                    <fullName>Event Approved</fullName>
                </value>
                <value>
                    <fullName>Logistics Confirmed</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Awaiting Requestor's confirmation</fullName>
                </value>
                <value>
                    <fullName>Confirmed By LP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Technology__c</fullName>
        <description>Sub tech from Agenda Topic</description>
        <formula>text( Agenda_Id__r.Sub_Technology__c )</formula>
        <label>Sub-Technology</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TE_Owner_Full_Name__c</fullName>
        <description>This field created to capture TE owner's full name and same used in email template</description>
        <formula>Training_Offering_Id__r.Owner:User.FirstName &amp; " " &amp; Training_Offering_Id__r.Owner:User.LastName</formula>
        <label>TE Owner Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <description>formula reference from Agenda object</description>
        <formula>TEXT( Agenda_Id__r.Technology__c )</formula>
        <label>Technology</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trainer_Email__c</fullName>
        <description>Updated By Learning Partner</description>
        <inlineHelpText>Updated By Learning Partner</inlineHelpText>
        <label>Trainer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Trainer_Name__c</fullName>
        <description>Updated By Learning Partner</description>
        <inlineHelpText>Updated By Learning Partner</inlineHelpText>
        <label>Trainer Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trainer_contact__c</fullName>
        <inlineHelpText>Updated By Learning Partner</inlineHelpText>
        <label>Trainer contact</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Training_Event_StartDate__c</fullName>
        <description>Training Event Start Date Time</description>
        <formula>Training_Offering_Id__r.Start_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Training Event Start Date Time</inlineHelpText>
        <label>Training Event StartDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Training_Event_endDate__c</fullName>
        <description>Training Event End Date Time</description>
        <formula>Training_Offering_Id__r.End_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Training Event End Date Time</inlineHelpText>
        <label>Training Event endDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Training_Offering_Id__c</fullName>
        <label>Training Offering Id</label>
        <referenceTo>PEPE_Training_Event__c</referenceTo>
        <relationshipLabel>Event Agenda</relationshipLabel>
        <relationshipName>Training_Agenda</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Training_Type__c</fullName>
        <description>formula reference from Agenda object</description>
        <formula>TEXT( Agenda_Id__r.Training_Types__c )</formula>
        <label>Training Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAT__c</fullName>
        <description>This is used for Value Added Tax to be entered. This is used by some countries for entering VAT</description>
        <inlineHelpText>Updated By Learning Partner</inlineHelpText>
        <label>VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>isFeedbackSubmitted__c</fullName>
        <label>isFeedbackSubmitted</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Event Agenda</label>
    <nameField>
        <displayFormat>EA-{0000000000}</displayFormat>
        <label>Event Agenda Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Agenda</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>Event_Agenda_TE_Submitted_PPLAdmin</fullName>
        <active>true</active>
        <label>Event_Agenda_TE_Submitted_PPLAdmin</label>
    </recordTypes>
    <recordTypes>
        <fullName>PPL_EA_Created</fullName>
        <active>true</active>
        <label>PPL EA Created</label>
    </recordTypes>
    <recordTypes>
        <fullName>PPL_EA_EventApprovedOrDelivered</fullName>
        <active>false</active>
        <description>Event Agenda Record Type when status is in Event Approved or Delivered</description>
        <label>PPL EA EventApprovedOrDelivered</label>
    </recordTypes>
    <recordTypes>
        <fullName>PPL_EA_EventApproved_Or_Delivered_or_LogisticConfirm</fullName>
        <active>true</active>
        <label>PPL EA EventApproved Or Delivered or LogisticConfirm</label>
    </recordTypes>
    <recordTypes>
        <fullName>PPL_Event_Agenda_LPBC</fullName>
        <active>true</active>
        <label>PPL Event Agenda LPBC</label>
    </recordTypes>
    <recordTypes>
        <fullName>PPL_Event_Agenda_QA_AR_RDR</fullName>
        <active>true</active>
        <label>PPL Event Agenda QA AR RDR</label>
    </recordTypes>
    <recordTypes>
        <fullName>REC_Event_Agenda_Layout_Event_Published</fullName>
        <active>true</active>
        <description>This layout is used when the Training Event is published</description>
        <label>Event Agenda Layout_Event_Published</label>
    </recordTypes>
    <validationRules>
        <fullName>Handling_Status_After_Confirmed_by_LP</fullName>
        <active>false</active>
        <description>After 'Confirmed by Learning Partner', Status can be changed to Quote Accepted, Quote Rejected and Revised Details Requested</description>
        <errorConditionFormula>AND(
ISPICKVAL(PRIORVALUE(Status__c),"Confirmed by Learning Partner"), (ISPICKVAL(Status__c,"Learning Partner being contacted"))
)</errorConditionFormula>
        <errorMessage>Status can't be Learning Partner being contacted</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Is_CSAT_Range_0_to_5</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( $User.ProfileId == $Setup.ProfileID__c.Cisco_ADMIN__c )&amp;&amp; (FLOOR( CSAT__c ) &lt; 0 ||
 CEILING( CSAT__c ) &gt; 5)</errorConditionFormula>
        <errorDisplayField>CSAT__c</errorDisplayField>
        <errorMessage>Range of CSAT score is 0 to 5</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LPDetails_Editable_whenLPBCandMOREINFO</fullName>
        <active>false</active>
        <description>Learning Partner fields must be editable only on LPBC and More info required</description>
        <errorConditionFormula>NOT(ISPICKVAL( Status__c, 'Learning Partner being contacted' ) || ISPICKVAL(Status__c, 'More Info Required' )) &amp;&amp; 
( 
ISCHANGED(Trainer_Name__c) || NOT(ISBLANK(Trainer_Name__c))|| 

ISCHANGED( Delivery_by_local_learning_Partner__c ) || 
NOT(ISPICKVAL( Delivery_by_local_learning_Partner__c, ''))|| 

ISCHANGED( Local_Learning_Partner_Name__c )|| 
NOT(ISNULL(Local_Learning_Partner_Name__c))|| 

ISCHANGED( Delivery_in_preferred_language__c ) || 
NOT(ISPICKVAL(Delivery_in_preferred_language__c, ''))|| 

ISCHANGED(Alternate_Language__c)|| 
NOT(ISNULL(Alternate_Language__c))||

ISCHANGED( Learning_Partner_Cost__c ) || 
NOT(ISNULL( Learning_Partner_Cost__c ))||

ISCHANGED( Catering_and_Vendor_Cost__c ) || 
NOT(ISNULL( Catering_and_Vendor_Cost__c ))||

ISCHANGED( VAT__c ) || 
NOT(ISNULL( VAT__c ))||

ISCHANGED( DW_Cost__c ) || 
NOT(ISNULL( DW_Cost__c ))


)</errorConditionFormula>
        <errorMessage>Learning Partner fields must be editable only on LPBC and More info required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Read_Only_When_TE_in_Deleted_Status</fullName>
        <active>true</active>
        <description>When Training Event is in Deleted Status all related Event Agenda fields are read only.</description>
        <errorConditionFormula>AND(ISPICKVAL(Training_Offering_Id__r.Status__c, 'Deleted'),
OR(
ISCHANGED(Status__c),
ISCHANGED(Start_Date_Time__c),
ISCHANGED(End_Date_Time__c),
ISCHANGED(Trainer_Name__c),
ISCHANGED(Delivery_by_local_learning_Partner__c),
ISCHANGED(Local_Learning_Partner_Name__c),
ISCHANGED(Delivery_in_preferred_language__c),
ISCHANGED(Alternate_Language__c),
ISCHANGED(Learning_Partner_Cost__c),
ISCHANGED(Catering_and_Vendor_Cost__c),
ISCHANGED(VAT__c),
ISCHANGED(DW_Cost__c),
ISCHANGED(Actual_Cost__c)
) )</errorConditionFormula>
        <errorMessage>Training Event is in Deleted Status, We cannot update Event Agenda record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StartDateTime_shd_be_SynWith_EndDateTime</fullName>
        <active>true</active>
        <description>Start Date time Should be before the End Date Time.</description>
        <errorConditionFormula>IF( End_Date_Time__c &lt; Start_Date_Time__c, true, false)</errorConditionFormula>
        <errorMessage>End Date Time can not be before then Start Date Time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StartDate_EndDate_SyncWithTEDates</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( 
(Start_Date_Time__c  &gt;=  Training_Offering_Id__r.Start_Date_Time__c )
&amp;&amp; (Training_Offering_Id__r.End_Date_Time__c &gt;= Start_Date_Time__c)
)||
NOT( 
(End_Date_Time__c  &gt;=  Training_Offering_Id__r.Start_Date_Time__c )
&amp;&amp; (Training_Offering_Id__r.End_Date_Time__c &gt;= End_Date_Time__c)
)</errorConditionFormula>
        <errorMessage>Select the DateTime within the range of TE related DateTime Values</errorMessage>
    </validationRules>
</CustomObject>